[package]
name = "cobalt"
version = "0.0.1"
authors = ["Sorin Davidoi <sorin.davidoi@gmail.com>"]

[dependencies]
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
ring = "0.11.0"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
rocket_cors = "0.2.0"
